--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="hero-image-container">
-                        <img src="profile.png" alt="Profile" class="hero-image">
+                        <img src="Sai.jpg" alt="Profile" class="hero-image">
                     </div>
                 </div>
             </div>
