--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="row align-items-center">
                 <div class="col-md-5">
                     <div class="about-image-container">
-                        <img src="IMG_20240310_114017.jpg" alt="About Me" class="about-image">
+                        <img src="Image.jpg" alt="About Me" class="about-image">
                     </div>
                 </div>
                 <div class="col-md-7 mt-2">
