--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <p class="lead">Full Stack Developer & Student at VNRVJIET</p>
                     <div class="hero-buttons">
                         <a href="#contact" class="btn btn-primary mr-3">Contact Me</a>
-                        <a href="Resume.pdf" target="_blank" class="btn btn-outline-light">Download CV</a>
+                        <a href="Saiteja_Garlapati_Resume.pdf" target="_blank" class="btn btn-outline-light">Download CV</a>
                     </div>
                 </div>
             </div>
