--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <!-- Project Cards -->
                 <div class="col-lg-4 col-md-6">
                     <div class="project-card">
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/portfolio-project-2-img.png" class="project-image" alt="Project 1">
+                        <img src="https://plus.unsplash.com/premium_photo-1720744786849-a7412d24ffbf?q=80&w=2009&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="project-image" alt="Project 1">
                         <div class="project-content">
                             <h3>Full-Stack Blog Application</h3>
                             
