--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="project-card">
-                        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/portfolio-project-2-img.png" class="project-image" alt="Project 1">
+                        <img src="https://media.istockphoto.com/id/2191629602/photo/medical-health-cloud-data-concept-a-doctor-analyzing-with-a-tablet-and-laptop-accessing.jpg?s=2048x2048&w=is&k=20&c=P4cvsFMZxC_olliPjp1PDn67v4xmOY7jf-sknFKAq4U=" class="project-image" alt="Project 1">
                         <div class="project-content">
                             <h3>AI-Driven Healthcare Solution</h3>
                             
